--- a/SumuladorAlgoritmos/CMakeLists.txt
+++ b/SumuladorAlgoritmos/CMakeLists.txt
@@ -26,6 +26,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(SumuladorAlgoritmos
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
+        ventanafifo.h ventanafifo.cpp ventanafifo.ui
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET SumuladorAlgoritmos APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
